@@ -3,6 +3,7 @@
 - Fix #571, accept invitation when password changes only if reset_password_token was present
 - Add support for setting invited_by foreign key
 - Set random initial password for invited users
+- Don't override password while User.invite!
 
 = 1.5.1
 
